err/pergenie.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pergenie'...
Listing './lib/python3.5/site-packages/pergenie/data'...
Listing './lib/python3.5/site-packages/pergenie/lib'...
Listing './lib/python3.5/site-packages/pergenie/lib/parser'...
Compiling './lib/python3.5/site-packages/pergenie/lib/parser/VCFParser.py'...
***   File "./lib/python3.5/site-packages/pergenie/lib/parser/VCFParser.py", line 30
    raise VCFParseError, 'Header-lines seem invalid. `#CHROM ...` does not exists.'
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pergenie/lib/parser/andmeParser.py'...
***   File "./lib/python3.5/site-packages/pergenie/lib/parser/andmeParser.py", line 42
    raise andmeParseError, 'Header-lines seem invalid. `# rsid ...` does not exists.'
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pergenie/lib/riskreport'...
Compiling './lib/python3.5/site-packages/pergenie/lib/riskreport/base.py'...
***   File "./lib/python3.5/site-packages/pergenie/lib/riskreport/base.py", line 243
    print 'genotype?? genotype:{0} risk-allele {1} '.format(genotype, risk_allele)  ###
                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pergenie/lib/utils'...
Listing './lib/python3.5/site-packages/pergenie-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './share'...
Listing './share/python-wheels'...
